/*
 * $Id: ChangeLog,v 1.2934 2004/05/13 10:40:00 modalsist Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-05-13 10:40 UTC-0300 Eduardo Fernandes <eduardo@modalsistemas.com.br>
  * source/rtl/memoedit.prg
    ! Fixed bug in read-only mode when run an user function. Thanks to Stephan
      Hennekens.

2004-05-13 15:25 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/source/rtl/teditor.prg
    * Just formatting to make it readabale and graspable. No code change as
      Eduardo is working on it.

    /* Eduardo, please note that a debugged code is always better but a 
       manageable code is much-much better. */

2004-05-12 23:05 UTC-0300 Eduardo Fernandes <eduardo@modalsistemas.com.br>
  * source/rtl/teditor.prg
    * Better cursor and text scroll management.


2004-05-12 20:45 UTC+0200 Maurilio Longo <maurilio.longo@libero.it>
   * include/hbdefs.h
     * moved end of section regarding HB_DONT_DEFINE_BASIC_TYPES before
       /*
        * this is a hack and doesn't have to be true on some machines
        * please update it if necessary
        */
       this is required to be able to compile with GCC under OS/2, I hope this doesn't
       break anything else, but to know I have to commit.

2004-05-12 16:00 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
  * include/hbdefs.h
    * Added #if ( ! defined( __MINGW32__ ) ) for UINT_16MAX
  * source/rdd/dbf1.c
    + Added #if defined( __MINGW32__ ) for include <stdint.h>

2004-05-12 16:20 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * contrib/libct/screen2.prg
    + Added SAYSCREEN(). Thanks to Valery Belorustcev.

2004-05-11 21:32 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbdefs.h
    * Added #if ( ! defined( __XCC__ ) ) guard arounf #define [U]INT16|32_MIN|MAX

  * source/rdd/dbf1.c